2008-11-24  Bernhard Walle <bwalle@suse.de>

	* Document kdump problems on Xen.
	* Don't display the full mkinitrd output.

2008-11-21  Bernhard Walle <bwalle@suse.de>

	* Don't use the FQDN but only the hostname to avoid DNS lookups
	  and errors on wrongly configured systems.
	* Fix empty KDUMP_SAVEDIR line when replacing the symbolic link with the
	  absolute path.
	* Don't set sysctl kernel.unknown_nmi_panic=1 by default.
	* Mention kernel.panic_on_unrecovered_nmi (yes, that's a different
	  sysctl) in the kdump(7) manpage.

2008-11-20  Bernhard Walle <bwalle@suse.de>

	* Document 256M limit on ppc64 for large machines in kdump(7).

2008-11-19  Bernhard Walle <bwalle@suse.de>

	* Implement KDUMP_VERBOSE = 16 to debug kdump find_kernel.
	* Make boot.kdump dependent on boot.localnet to have a correct hostname.
	* Fix stripping of the crashkernel command line again.
	* Create the release tarballs with Mercurial.
	* Don't include test cases in the release tarball. They are very
	  incomplete and contain too huge test data.
	* Honor TMPDIR and set that to disk space instead of the ramdisk when
	  saving the dump in the initrd.

2008-11-18  Bernhard Walle <bwalle@suse.de>

	* Add find_kernel command in kdumptool, replacing the find code in the
	  init script.
	* Refactoring.

2008-11-17  Bernhard Walle <bwalle@suse.de>

	* Implement read_ikconfig command.

2008-11-13  Bernhard Walle <bwalle@suse.de>

	* Strip the whole crashkernel option when loading the kdump kernel, not
	  only parts of them, also when the extended crashkernel syntax has been
	  used.

2008-11-12  Bernhard Walle <bwalle@suse.de>

	* Fix wrong path when modifying the /etc/sysconfig/kdump file when
	  creating the kdump initrd.
	* Fix compile warning (ignoring return value of chdir(2)).
	* Prepend a space before MAKEDUMPFILE_OPTIONS so that there's always a
	  space between command and the first argument.
	* Fix finding of the kernel image (/boot/vmlinuz) with rootdir.
