@@ -2,6 +2,7 @@
 
 	* Document kdump problems on Xen.
 	* Don't display the full mkinitrd output.
+	* Warn about zero-size vmcore.
 
 2008-11-21  Bernhard Walle <bwalle@suse.de>
 
